--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <!-- CSS style -->
-        <link rel="stylesheet" type="text/css" href="./style/style.css" />
+        <link rel="stylesheet" type="text/css" href="./style/style.css" id="css"/>
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <!--Detect mobile tablet pc-->
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.js" integrity="sha512-mKlod4zKRIIIrcTz1adxwkprNtUm1lZZL2yP+l9UEmK6mXndshkfPojjPkVOKOanqBM9b2Gc88eBjLCAgkWtHw==" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="text-center">Module connexion/inscription</h1>
+        <header>
+
+        </header>
+        <aside>
+
+        </aside>
+        <main>
+            <ul id="songlist">
+            </ul>
+        </main>
+        <!-- Module inscription/connexion
+            <h1 class="text-center">Module connexion/inscription</h1>
         <form class="text-center">
             <header>
                 <h2>inscription</h2>
@@ -34,6 +47,32 @@
                 <button class="btn btn-success d-block mx-auto" id="btnConnexion">Connexion</button>
             </header>
         </form>
+        -->
+        <!-- Lecteur mp3 -->
+        <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" type="audio/mp3" id="music">
+        </audio>
+        <footer class="w-100 position-fixed bottom-0 d-flex justify-content-between">
+            <div class="d-inline-flex">
+                <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
+                <p class="m-1 text-white align-self-end" id="musictitle">titre musique</p>
+            </div>
+            <div class="position-absolute mt-4" id="playbar">
+                <div id="progress">
+                    <div></div>
+                </div>
+                <div class="d-flex justify-content-center mt-3">
+                    <i class="fas fa-step-backward text-white mx-4" id="backwards"></i>
+                    <i class="fas fa-play text-white mx-4" id="play"></i>
+                    <i class="fas fa-step-forward text-white mx-4" id="forwards"></i>
+                </div>
+            </div>
+            <div class="d-inline-flex align-self-end" id="sound">
+                <i class="fas fa-volume-mute text-white align-self-center" id="muteBtn"></i>
+                <div class="align-self-center m-2" id="soundprogress">
+                    <div></div>
+                </div>
+            </div>
+        </footer>
         <script src="style/default.js"></script>
     </body>
 </html>
