--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div class="d-inline-flex">
                 <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
                 <p class="m-1 text-white align-self-end" id="musictitle">titre musique</p>
+                <p class="m-1 text-white" id="artistname"><span>Artiste</span></p>
             </div>
             <div class="position-absolute mt-4" id="playbar">
                 <div id="progress">
