--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.js" integrity="sha512-mKlod4zKRIIIrcTz1adxwkprNtUm1lZZL2yP+l9UEmK6mXndshkfPojjPkVOKOanqBM9b2Gc88eBjLCAgkWtHw==" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
-
-        </header>
+        <div class="headerwrapper position-relative">
+            <header class="position-absolute">
+            </header>
+        </div>
         <aside>
 
         </aside>
@@ -49,31 +50,34 @@
         </form>
         -->
         <!-- Lecteur mp3 -->
+        <div class="footerwrapper position-relative">
+            <footer class="w-100 position-fixed bottom-0 d-flex justify-content-between">
+                <div class="d-inline-flex">
+                    <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
+                    <p class="m-1 text-white align-self-end" id="musictitle">titre musique</p>
+                    <p class="m-1 text-white" id="artistname"><span>Artiste</span></p>
+                </div>
+                <div class="position-absolute mt-4" id="playbar">
+                    <div id="progress">
+                        <div></div>
+                    </div>
+                    <div class="d-flex justify-content-center mt-3">
+                        <i class="fas fa-step-backward text-white mx-4" id="backwards"></i>
+                        <i class="fas fa-play text-white mx-4" id="play"></i>
+                        <i class="fas fa-step-forward text-white mx-4" id="forwards"></i>
+                    </div>
+                </div>
+                <div class="d-inline-flex align-self-end" id="sound">
+                    <i class="fas fa-volume-mute text-white align-self-center" id="muteBtn"></i>
+                    <div class="align-self-center m-2" id="soundprogress">
+                        <div></div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        
         <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" type="audio/mp3" id="music">
         </audio>
-        <footer class="w-100 position-fixed bottom-0 d-flex justify-content-between">
-            <div class="d-inline-flex">
-                <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
-                <p class="m-1 text-white align-self-end" id="musictitle">titre musique</p>
-                <p class="m-1 text-white" id="artistname"><span>Artiste</span></p>
-            </div>
-            <div class="position-absolute mt-4" id="playbar">
-                <div id="progress">
-                    <div></div>
-                </div>
-                <div class="d-flex justify-content-center mt-3">
-                    <i class="fas fa-step-backward text-white mx-4" id="backwards"></i>
-                    <i class="fas fa-play text-white mx-4" id="play"></i>
-                    <i class="fas fa-step-forward text-white mx-4" id="forwards"></i>
-                </div>
-            </div>
-            <div class="d-inline-flex align-self-end" id="sound">
-                <i class="fas fa-volume-mute text-white align-self-center" id="muteBtn"></i>
-                <div class="align-self-center m-2" id="soundprogress">
-                    <div></div>
-                </div>
-            </div>
-        </footer>
         <script src="style/default.js"></script>
     </body>
 </html>
