working on audio

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <footer class="w-100 position-fixed bottom-0 d-flex justify-content-between">
                 <div class="d-inline-flex">
                     <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
-                    <p class="m-1 text-white align-self-end" id="musictitle">titre musique</p>
+                    <p class="m-1 text-white align-self-lg-end" id="musictitle">titre musique</p>
                     <p class="m-1 text-white" id="artistname"><span>Artiste</span></p>
                 </div>
                 <div class="position-absolute mt-4" id="playbar">
@@ -75,6 +75,9 @@
                     </div>
                 </div>
             </footer>
+        </div>
+        <div class="musicshower position-absolute d-none">
+            
         </div>
         
         <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" type="audio/mp3" id="music">
