--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </form>
         -->
         <!-- Lecteur mp3 -->
-        <div class="footerwrapper position-relative">
+        <!-- 
+            <div class="footerwrapper position-relative">
             <footer class="w-100 position-fixed bottom-0 d-flex justify-content-between">
                 <div class="d-inline-flex">
                     <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" class="m-2" id="songimg">
@@ -76,6 +77,27 @@
                 </div>
             </footer>
         </div>
+        -->
+        <div class="footerwrapper position-relative">
+            <footer class="w-100 position-fixed bottom 0">
+                <span id="imgalign"></span><img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" id="songimg">
+                <div class="position-absolute" id="textcontainer">
+                    <p class="m-0 text-white" id="musictitle">titre musique</p>
+                    <p class="m-0 text-white" id="artistname"><span>Artiste</span></p>
+                </div>
+                <div class="position-absolute start-50" id="playbar">
+                    <div id="progress">
+                        <div></div>
+                    </div>
+                    <div class="d-flex justify-content-center mt-2">
+                        <i class="fas fa-step-backward text-white mx-4" id="backwards"></i>
+                        <i class="fas fa-play text-white mx-4" id="play"></i>
+                        <i class="fas fa-step-forward text-white mx-4" id="forwards"></i>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        
         <div class="musicshower position-absolute d-none">
             
         </div>
