working on ful mobile musicplayer

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         
-        <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" data-id="1" id="music">
+        <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" preload="metadata" data-id="1" id="music">
         </audio>
         <script src="style/default.js"></script>
     </body>
