--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
                 <div class="progress">
                     <div></div>
                 </div>
-                <div class="d-flex justify-content-center mt-2">
+                <div>
+                    <p class="text-white text-center"><span class="currentlength"></span>/<span class="totalength"></span></p>
+                </div>
+                <div class="d-flex justify-content-center mt-3">
                     <i class="fas fa-step-backward text-white mx-4 backwards" data-value="-1"></i>
-                    <i class="fas fa-play text-white mx-4 play"></i>
+                    <i class="fas fa-play text-white mx-4 mt-0 play"></i>
                     <i class="fas fa-step-forward text-white mx-4 forwards" data-value="1"></i>
                 </div>
             </div>
