--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="./style/style.css" id="css"/>
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <!--Detect mobile tablet pc-->
@@ -102,6 +103,10 @@
         <div class="musicfull musicfullhide position-absolute">
             <i class="fa fa-chevron-down text-white position-absolute end-0 top-0 m-0 downchevron"></i>
             <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" alt="error !" class="songimg">
+            <div class="d-inline-flex">
+                <i class="fa fa-volume text-white"></i>
+                <input type="range" min="0" max="100" value="50" class="soundprogress">
+            </div>
             <div class="position-absolute textcontainer">
                 <p class="m-0 text-white musictitle"></p>
                 <p class="m-0 text-white artistname"><span></span></p>
