--- a/index.html
+++ b/index.html
@@ -19,11 +19,24 @@
     </head>
     <body>
         <div class="headerwrapper position-relative">
-            <header class="position-absolute">
+            <header class="position-absolute w-100 h-100 start-0">
+                <i class="fas fa-bars d-none menudrawer position-absolute top-50"></i>
             </header>
         </div>
-        <aside>
-
+        <aside class="hide">
+            <div class="drawheader">
+                <img class="w-25" src="https://p5.storage.canalblog.com/56/05/74726/6033585.jpg" id="menupdppicture">
+                <h3 class="text-center w-75">Nom prénom</h3>
+            </div>
+            <div class="drawcontainer">
+                <ul>
+                    <li id="home">Accueil</li>
+                    <li id="playlists">Playlist</li>
+                    <li id="favorites">Favoris</li>
+                    <li id="connect">Connexion</li>
+                    <li id="disconnect">Se déconnecter</li>
+                </ul>
+            </div>
         </aside>
         <main>
             <ul id="songlist">
@@ -80,7 +93,6 @@
         </div>
         -->
         <div class="footerwrapper position-relative">
-            <i class="fa fa-chevron-up text-white position-absolute end-0 bottom-0 upchevron"></i>
             <footer class="w-100 position-fixed bottom 0">
                 <span class="imgalign"></span><img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" alt="error !" class="songimg">
                 <div class="position-absolute textcontainer">
@@ -97,16 +109,15 @@
                         <i class="fas fa-step-forward text-white mx-4 forwards" data-value="1"></i>
                     </div>
                 </div>
+                <div class="d-inline-flex volumediv">
+                    <i class="fa fa-volume text-white"></i>
+                    <input type="range" min="0" max="100" value="50" class="soundprogress">
+                </div>
             </footer>
         </div>
         
         <div class="musicfull musicfullhide position-absolute">
-            <i class="fa fa-chevron-down text-white position-absolute end-0 top-0 m-0 downchevron"></i>
             <img src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/optim/i/edit/2019/04/eso1644bsmall__w770.jpg" alt="error !" class="songimg">
-            <div class="d-inline-flex">
-                <i class="fa fa-volume text-white"></i>
-                <input type="range" min="0" max="100" value="50" class="soundprogress">
-            </div>
             <div class="position-absolute textcontainer">
                 <p class="m-0 text-white musictitle"></p>
                 <p class="m-0 text-white artistname"><span></span></p>
