--- a/index.html
+++ b/index.html
@@ -129,16 +129,21 @@
                 <div>
                     <p class="text-white text-center"><span class="currentlength"></span>/<span class="totalength"></span></p>
                 </div>
-                <div class="d-flex justify-content-center mt-3">
+                <div class="d-flex justify-content-center mt-3 w-100">
                     <i class="fas fa-step-backward text-white mx-4 backwards" data-value="-1"></i>
                     <i class="fas fa-play text-white mx-4 mt-0 play"></i>
                     <i class="fas fa-step-forward text-white mx-4 forwards" data-value="1"></i>
                 </div>
             </div>
+            <i class="far fa-heart text-white position-absolute end-0 bottom-0 m-3 mb-5"></i>
         </div>
         
         <audio src="https://ncsmusic.s3.eu-west-1.amazonaws.com/tracks/000/000/912/young-wild-free-1614333632-xGqBA20Zwl.mp3" preload="metadata" data-id="1" id="music">
         </audio>
+
+        <div class="textbox">
+            <h4 class="text-center"></h4>
+        </div>
         <script src="style/default.js"></script>
     </body>
 </html>
