--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="headerwrapper position-relative">
             <header class="position-absolute w-100 h-100 start-0">
                 <i class="fas fa-bars d-none menudrawer position-absolute top-50"></i>
+                <i class="far fa-search d-none searchshow position-absolute top-50"></i>
             </header>
         </div>
         <aside class="hide">
@@ -39,6 +40,10 @@
             </div>
         </aside>
         <main>
+            <div class="searchbar">
+                <input type="text" placeholder="Rechercher..." id="searchinput">
+                <i class="far fa-search "></i>
+            </div>
             <ul id="songlist">
             </ul>
         </main>
