--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="modal-body">
                     </div>
                     <div class="modal-footer">
-                    <button type="button" class="btn btn-primary mx-auto confirm">Ajouter</button>
+                    <button type="button" class="btn btn-primary mx-auto quit">Terminé</button>
                     </div>
                 </div>
             </div>
