--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="drawheader">
                     <img src="data/spotinein_logo.png" id="spotinein">
                     <img class="w-25" src="https://p5.storage.canalblog.com/56/05/74726/6033585.jpg" id="menupdppicture">
-                    <h3 class="text-center w-75">Nom prénom</h3>
+                    <h3 class="text-center text-white w-75 username"></h3>
                 </div>
                 <div class="drawcontainer">
                     <ul>
@@ -54,6 +54,7 @@
             </div>
             <h1 class="m-3 lastheardtitles">Derniers titres écoutés</h1>
             <div class="lastheardcontainer">
+                <div class="scrollable"></div>
             </div>
         </main>
         <div class="footerwrapper position-relative">
@@ -103,8 +104,6 @@
                     <i class="fas fa-step-forward text-white mx-4 forwards" data-value="1"></i>
                 </div>
             </div>
-            <i class="far fa-headphones text-white position-absolute start-0 bottom-0 m-3 mb-5"></i>
-            <i class="far fa-heart text-white position-absolute end-0 bottom-0 m-3 mb-5"></i>
         </div>
         
         <audio src="" preload="metadata" data-id="0" id="music">
